WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75494
[chromium] LocalFileSystemChromium needs some thread safety fixes.
https://bugs.webkit.org/show_bug.cgi?id=75494
Summary
[chromium] LocalFileSystemChromium needs some thread safety fixes.
David Levin
Reported
2012-01-03 14:10:58 PST
Test will be part of the final fix. Another issue need to be addressed before a test can be landed (and I need to figure out how to make the test have consistent output).
Attachments
Patch
(4.71 KB, patch)
2012-01-03 14:15 PST
,
David Levin
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.71 KB, patch)
2012-01-03 15:03 PST
,
David Levin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2012-01-03 14:15:16 PST
Created
attachment 120995
[details]
Patch
Dmitry Titov
Comment 2
2012-01-03 14:40:23 PST
Comment on
attachment 120995
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=120995&action=review
> Source/WebKit/chromium/src/LocalFileSystemChromium.cpp:2 > + * Copyright (C) 2010, 2011 Google Inc. All rights reserved.
2012?
David Levin
Comment 3
2012-01-03 15:03:17 PST
Created
attachment 121003
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-01-03 18:26:14 PST
Comment on
attachment 121003
[details]
Patch for landing Clearing flags on attachment: 121003 Committed
r103996
: <
http://trac.webkit.org/changeset/103996
>
WebKit Review Bot
Comment 5
2012-01-03 18:26:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug